--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
+    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "migup": "knex migrate:up",
+    "migdown": "knex migrate:up",
+    "seed": "knex seed:run"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "cross-env": "^7.0.3",
     "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3"
@@ -17,7 +23,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.95.7",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
